--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,12 @@
 node_modules
 temp
 .tmp
-dist
 .sass-cache
 app/bower_components
 test/bower_components
 package
 app/scripts
-
+dist/
 # Logs
 logs
 *.log
