--- a/package.json
+++ b/package.json
@@ -1,47 +1,39 @@
 {
   "name": "chromesppropertiesadmin",
-  "private": true,
-  "engines": {
-    "node": ">=0.8.0"
-  },
+  "version": "0.0.1",
+  "description": "Google Chrome extension that opens a Property bag Modal dialog administration",
+  "dependencies": {},
   "devDependencies": {
-    "babel-core": "^6.7.2",
-    "babel-preset-es2015": "^6.6.0",
-    "del": "^2.2.0",
+    "browserify": "^13.0.1",
     "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-cache": "^0.4.3",
-    "gulp-chrome-manifest": "0.0.13",
-    "gulp-clean-css": "^2.0.3",
-    "gulp-eslint": "^2.0.0",
-    "gulp-if": "^2.0.0",
-    "gulp-imagemin": "^2.4.0",
-    "gulp-livereload": "^3.8.1",
-    "gulp-load-plugins": "^1.2.0",
-    "gulp-htmlmin": "^1.3.0",
-    "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.5.3",
-    "gulp-useref": "^3.0.8",
-    "gulp-zip": "^3.2.0",
-    "main-bower-files": "^2.11.1",
-    "run-sequence": "^1.1.5",
-    "wiredep": "^4.0.0"
+    "gulp-typescript": "^2.13.6",
+    "gulp-uglify": "^1.5.4",
+    "gulp-util": "^3.0.7",
+    "tsify": "^1.0.1",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0"
   },
-  "eslintConfig": {
-    "env": {
-      "node": true,
-      "browser": true
-    },
-    "globals": {
-      "chrome": true
-    },
-    "rules": {
-      "eol-last": 0,
-      "quotes": [
-        2,
-        "single"
-      ]
-    }
-  }
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DariuS231/ChromeSPPropertiesAdmin.git"
+  },
+  "keywords": [
+    "SharePoint",
+    "PropertyBag",
+    "CSOM",
+    "JavaScript",
+    "Google Chrome",
+    "Chrome Extension"
+  ],
+  "author": "Darius231",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/DariuS231/ChromeSPPropertiesAdmin/issues"
+  },
+  "homepage": "https://github.com/DariuS231/ChromeSPPropertiesAdmin#readme"
 }
