--- a/package.json
+++ b/package.json
@@ -4,16 +4,11 @@
   "description": "Google Chrome extension that opens a Property bag Modal dialog administration",
   "dependencies": {},
   "devDependencies": {
-    "browserify": "^13.0.1",
     "gulp": "^3.9.1",
-    "gulp-sourcemaps": "^1.6.0",
     "gulp-typescript": "^2.13.6",
     "gulp-uglify": "^1.5.4",
-    "gulp-util": "^3.0.7",
-    "tsify": "^1.0.1",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.7.0"
+    "gulp-zip": "^3.2.0",
+    "tsify": "^1.0.1"    
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
