--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "dependencies": {},
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-rename": "^1.2.2",
     "gulp-typescript": "^2.13.6",
     "gulp-uglify": "^1.5.4",
     "gulp-zip": "^3.2.0",
-    "tsify": "^1.0.1"    
+    "tsify": "^1.0.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
