--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,14 @@
 {
      "files": [
         "src/scripts/background.ts",
-        "src/scripts/spModalLauncher.ts"
+        "src/scripts/spModalLauncher.ts",
+        "typings/es6-shim/es6-shim.d.ts"
     ],
     "compilerOptions": {
         "outDir": "./dist/scripts",
-        "sourceMap": true,
+        "sourceMap": false,
         "noImplicitAny": true,
         "module": "commonjs",
-        "target": "es6"
+        "target": "es5"
     }
 }
