--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "gulp-typescript": "^2.13.6",
     "gulp-uglify": "^1.5.4",
     "gulp-zip": "^3.2.0",
-    "tsify": "^1.0.1",
+    "typescript": "^1.8.10",
     "typings": "^1.3.2"
   },
   "scripts": {
