--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
      "files": [
+        "typings/index.d.ts",  
         "src/scripts/background.ts",
         "src/scripts/spModalLauncher.ts"
     ],
