--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
   "description": "Google Chrome extension that opens a Property bag Modal dialog administration",
   "dependencies": {},
   "devDependencies": {
+    "babelify": "^7.3.0",
+    "browserify": "^13.1.0",
     "gulp": "^3.9.1",
     "gulp-param": "^1.0.3",
     "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-typescript": "^2.13.6",
     "gulp-uglify": "^1.5.4",
     "gulp-zip": "^3.2.0",
+    "tsify": "^1.0.1",
     "typescript": "^1.8.10",
-    "typings": "^1.3.2"
+    "typings": "^1.3.2",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
