First changes for react  migration

--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,10 @@ app/bower_components
 test/bower_components
 package
 app/scripts
-dist/
-spPropertyBag/*.map
+dist/chromeExtension
+**/*.map
 chromePackage*
+*.DS_Store
 # Logs
 logs
 *.log
