Revert "Update lates changes"

--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,9 @@ app/bower_components
 test/bower_components
 package
 app/scripts
-dist/chromeExtension
-**/*.map
+dist/
+spPropertyBag/*.map
 chromePackage*
-*.DS_Store
 # Logs
 logs
 *.log
