New modal with options

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -23,6 +23,7 @@
       "19": "images/icon-19.png",
       "38": "images/icon-38.png"
     },
-    "default_title": "Chrome SP Properties Admin"
+    "default_title": "Chrome SP Properties Admin",
+    "default_popup": "index.html"
   }
 }
