--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "Google Chrome extension that opens a Property bag Modal dialog administration",
   "dependencies": {
+    "foundation": "^4.2.1-1",
     "react": "^15.3.0",
     "react-dom": "^15.3.0"
   },
@@ -24,7 +25,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "typings install" 
+    "postinstall": "typings install"
   },
   "repository": {
     "type": "git",
