--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
     "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
     "gulp-param": "^1.0.3",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
