--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "bootstrap-sass": "^3.3.7",
     "jquery": "^3.1.0",
     "react": "^15.3.0",
-    "react-dom": "^15.3.0",
-    "react-router": "^2.7.0"
+    "react-dom": "^15.3.0"
   },
   "devDependencies": {
     "babelify": "^7.3.0",
