--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "typescript": "^1.8.10",
     "typings": "^1.3.2",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "es6-promise": "3.2.1",
+    "whatwg-fetch": "1.0.0",
+    "jquery": "3.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
