--- a/gulpconfig.json
+++ b/gulpconfig.json
@@ -8,7 +8,7 @@
             },
             "styles": {
                 "watchFiles": [
-                    "./src/**/*.scss"
+                    "./src/styles/**/*.scss"
                 ],
                 "bundle": "bundle.css",
                 "dist": "dist/chromeExtension/dev/styles/"
@@ -107,10 +107,10 @@
             },
             "styles": {
                 "watchFiles": [
-                    "./src/actions/styles/**/*.scss"
+                    "./src/scripts/actions/styles/components.scss"
                 ],
                 "bundle": "bundle.css",
-                "dist": "dist/actions/styles/"
+                "dist": "dist/actions/styles"
             }
         }
     },
