--- a/gulpconfig.json
+++ b/gulpconfig.json
@@ -72,12 +72,11 @@
             },
             "spSiteContent": {
                 "watchFiles": [
-                    "src/scripts/actions/SpSiteContent/**/*.tsx",
-                    "src/scripts/actions/common/spCustomModalWrapper.tsx",
-                    "src/scripts/actions/common/styles.ts"
+                    "src/scripts/actions/SpSiteContent/**/*.{ts,tsx}",
+                    "src/scripts/actions/common//**/*.{ts,tsx}"
                 ],
                 "entries": [
-                    "src/scripts/actions/SpSiteContent/main.tsx"
+                    "src/scripts/actions/SpSiteContent/app.tsx"
                 ],
                 "outputFolder": "dist/actions/SpSiteContent",
                 "outputFileName": "SpSiteContent.js"
