--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "gulp-uglify": "^2.0.0",
     "gulp-zip": "^3.2.0",
     "jquery": "3.1.1",
+    "react-redux": "^5.0.1",
+    "redux": "^3.6.0",
+    "redux-immutable-state-invariant": "^1.2.4",
     "tsify": "^2.0.2",
     "typescript": "^2.0.8",
     "typings": "^2.0.0",
