--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/microsoft-ajax": "0.0.31",
     "@types/react": "^0.14.46",
     "@types/react-dom": "^0.14.18",
+    "@types/react-redux": "^4.4.35",
+    "@types/redux-immutable-state-invariant": "^1.2.29",
     "@types/sharepoint": "^2013.0.31",
     "@types/whatwg-fetch": "0.0.32",
     "@types/whatwg-streams": "0.0.1",
