--- a/package.json
+++ b/package.json
@@ -1,75 +1,76 @@
 {
-    "name": "chromesppropertiesadmin",
-    "version": "0.0.1",
-    "description": "Google Chrome extension that opens a Property bag Modal dialog administration",
-    "dependencies": {
-        "axios": "^0.15.3",
-        "office-ui-fabric-react": "^0.68.1",
-        "react": "^15.3.2",
-        "react-dom": "^15.3.2",
-        "redux-thunk": "^2.1.0"
-    },
-    "devDependencies": {
-        "@types/axios": "^0.9.35",
-        "@types/chrome": "0.0.35",
-        "@types/core-js": "^0.9.34",
-        "@types/fbemitter": "^2.0.32",
-        "@types/flux": "0.0.33",
-        "@types/jquery": "^2.0.34",
-        "@types/microsoft-ajax": "0.0.31",
-        "@types/react": "^0.14.46",
-        "@types/react-dom": "^0.14.18",
-        "@types/react-redux": "^4.4.35",
-        "@types/redux-immutable-state-invariant": "^1.2.29",
-        "@types/redux-thunk": "^2.1.32",
-        "@types/sharepoint": "^2013.0.31",
-        "@types/whatwg-fetch": "0.0.32",
-        "@types/whatwg-streams": "0.0.1",
-        "babelify": "^7.3.0",
-        "browserify": "^13.1.1",
-        "es6-promise": "4.0.5",
-        "fbemitter": "^2.1.1",
-        "flux": "^3.1.0",
-        "gulp": "^3.9.1",
-        "gulp-concat": "^2.6.0",
-        "gulp-param": "^1.0.3",
-        "gulp-rename": "^1.2.2",
-        "gulp-sass": "^2.3.2",
-        "gulp-sourcemaps": "^2.2.0",
-        "gulp-typescript": "^3.1.2",
-        "gulp-uglify": "^2.0.0",
-        "gulp-zip": "^3.2.0",
-        "jquery": "3.1.1",
-        "react-redux": "^5.0.1",
-        "redux": "^3.6.0",
-        "redux-immutable-state-invariant": "^1.2.4",
-        "tsify": "^2.0.2",
-        "typescript": "^2.1.5",
-        "typings": "^2.0.0",
-        "vinyl-buffer": "^1.0.0",
-        "vinyl-source-stream": "^1.1.0",
-        "whatwg-fetch": "1.0.0"
-    },
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "postinstall": "typings install"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/DariuS231/ChromeSPPropertiesAdmin.git"
-    },
-    "keywords": [
-        "SharePoint",
-        "PropertyBag",
-        "CSOM",
-        "JavaScript",
-        "Google Chrome",
-        "Chrome Extension"
-    ],
-    "author": "Darius231",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/DariuS231/ChromeSPPropertiesAdmin/issues"
-    },
-    "homepage": "https://github.com/DariuS231/ChromeSPPropertiesAdmin#readme"
+  "name": "chromesppropertiesadmin",
+  "version": "0.0.1",
+  "description": "Google Chrome extension that opens a Property bag Modal dialog administration",
+  "dependencies": {
+    "axios": "^0.15.3",
+    "office-ui-fabric-react": "^0.68.1",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "redux-thunk": "^2.1.0"
+  },
+  "devDependencies": {
+    "@types/axios": "^0.9.35",
+    "@types/chrome": "0.0.35",
+    "@types/core-js": "^0.9.34",
+    "@types/fbemitter": "^2.0.32",
+    "@types/flux": "0.0.33",
+    "@types/jquery": "^2.0.34",
+    "@types/microsoft-ajax": "0.0.31",
+    "@types/node": "^7.0.0",
+    "@types/react": "^0.14.46",
+    "@types/react-dom": "^0.14.18",
+    "@types/react-redux": "^4.4.35",
+    "@types/redux-immutable-state-invariant": "^1.2.29",
+    "@types/redux-thunk": "^2.1.32",
+    "@types/sharepoint": "^2013.0.31",
+    "@types/whatwg-fetch": "0.0.32",
+    "@types/whatwg-streams": "0.0.1",
+    "babelify": "^7.3.0",
+    "browserify": "^13.1.1",
+    "es6-promise": "4.0.5",
+    "fbemitter": "^2.1.1",
+    "flux": "^3.1.0",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-param": "^1.0.3",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.3.2",
+    "gulp-sourcemaps": "^2.2.0",
+    "gulp-typescript": "^3.1.2",
+    "gulp-uglify": "^2.0.0",
+    "gulp-zip": "^3.2.0",
+    "jquery": "3.1.1",
+    "react-redux": "^5.0.1",
+    "redux": "^3.6.0",
+    "redux-immutable-state-invariant": "^1.2.4",
+    "tsify": "^2.0.2",
+    "typescript": "^2.1.5",
+    "typings": "^2.0.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "whatwg-fetch": "1.0.0"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "typings install"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DariuS231/ChromeSPPropertiesAdmin.git"
+  },
+  "keywords": [
+    "SharePoint",
+    "PropertyBag",
+    "CSOM",
+    "JavaScript",
+    "Google Chrome",
+    "Chrome Extension"
+  ],
+  "author": "Darius231",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/DariuS231/ChromeSPPropertiesAdmin/issues"
+  },
+  "homepage": "https://github.com/DariuS231/ChromeSPPropertiesAdmin#readme"
 }
