--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gulp-typescript": "^3.1.2",
     "gulp-uglify": "^2.0.0",
     "gulp-zip": "^3.2.0",
+    "http-server": "^0.9.0",
     "jquery": "3.1.1",
     "react-redux": "^5.0.1",
     "redux": "^3.6.0",
