--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "chromesppropertiesadmin",
   "version": "0.0.1",
   "description": "Google Chrome extension that opens a Property bag Modal dialog administration",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "typings install",
+    "bundleActions": "set NODE_ENV=production && webpack --progress --config ./webpack/webpack.config.actions.prod.js"
+  },
   "dependencies": {
     "axios": "^0.15.3",
     "office-ui-fabric-react": "^0.68.1",
@@ -26,9 +31,17 @@
     "@types/sharepoint": "^2013.0.31",
     "@types/whatwg-fetch": "0.0.32",
     "@types/whatwg-streams": "0.0.1",
+    "babel": "^6.5.2",
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-es2016": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.1",
+    "css-loader": "^0.26.1",
     "es6-promise": "4.0.5",
+    "extract-text-webpack-plugin": "^1.0.1",
     "fbemitter": "^2.1.1",
     "flux": "^3.1.0",
     "gulp": "^3.9.1",
@@ -42,19 +55,20 @@
     "gulp-zip": "^3.2.0",
     "http-server": "^0.9.0",
     "jquery": "3.1.1",
+    "path": "^0.12.7",
     "react-redux": "^5.0.1",
     "redux": "^3.6.0",
     "redux-immutable-state-invariant": "^1.2.4",
+    "sass-loader": "^4.1.1",
+    "style-loader": "^0.13.1",
+    "ts-loader": "^2.0.0",
     "tsify": "^2.0.2",
     "typescript": "^2.1.5",
     "typings": "^2.0.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
+    "webpack": "^1.14.0",
     "whatwg-fetch": "1.0.0"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "typings install"
   },
   "repository": {
     "type": "git",
