--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.1",
   "description": "Google Chrome extension that opens a Property bag Modal dialog administration",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "typings install",
-    "bundleActions": "set NODE_ENV=production && webpack --progress --config ./webpack/webpack.config.actions.prod.js"
+    "bundleActions": "set NODE_ENV=production && webpack --progress --config ./webpack/webpack.config.actions.prod.js",
+    "bundleChromeExtension": "set NODE_ENV=production && gulp build-chromeExt",
+    "generate": "set NODE_ENV=production && generate-chrome-dev"
   },
   "dependencies": {
     "axios": "^0.15.3",
@@ -31,27 +31,18 @@
     "@types/sharepoint": "^2013.0.31",
     "@types/whatwg-fetch": "0.0.32",
     "@types/whatwg-streams": "0.0.1",
-    "babel": "^6.5.2",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-es2016": "^6.22.0",
     "babel-preset-react": "^6.22.0",
-    "babelify": "^7.3.0",
-    "browserify": "^13.1.1",
     "css-loader": "^0.26.1",
     "es6-promise": "4.0.5",
     "extract-text-webpack-plugin": "^1.0.1",
     "fbemitter": "^2.1.1",
     "flux": "^3.1.0",
     "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-param": "^1.0.3",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.3.2",
-    "gulp-sourcemaps": "^2.2.0",
-    "gulp-typescript": "^3.1.2",
-    "gulp-uglify": "^2.0.0",
+    "gulp-util": "^3.0.8",
     "gulp-zip": "^3.2.0",
     "http-server": "^0.9.0",
     "jquery": "3.1.1",
@@ -62,17 +53,14 @@
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
     "ts-loader": "^2.0.0",
-    "tsify": "^2.0.2",
     "typescript": "^2.1.5",
     "typings": "^2.0.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
     "webpack": "^1.14.0",
     "whatwg-fetch": "1.0.0"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/DariuS231/ChromeSPPropertiesAdmin.git"
+    "url": "https://github.com/DariuS231/ChromeSPPropertiesAdmin.git"
   },
   "keywords": [
     "SharePoint",
