--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "Google Chrome extension that opens a Property bag Modal dialog administration",
   "scripts": {
+    "start": "set NODE_ENV=development && node server.js",
     "bundleActions": "set NODE_ENV=production && webpack --progress --config ./webpack/webpack.config.actions.prod.js",
     "bundleChromeExtension": "set NODE_ENV=production && gulp build-chromeExt",
     "generate": "set NODE_ENV=production && generate-chrome-dev"
@@ -45,8 +46,12 @@
     "gulp-util": "^3.0.8",
     "gulp-zip": "^3.2.0",
     "http-server": "^0.9.0",
+    "immutable": "^3.8.1",
     "jquery": "3.1.1",
+    "node-sass": "^4.4.0",
+    "opener": "^1.4.2",
     "path": "^0.12.7",
+    "react-hot-loader": "~3.0.0-beta.6",
     "react-redux": "^5.0.1",
     "redux": "^3.6.0",
     "redux-immutable-state-invariant": "^1.2.4",
@@ -56,6 +61,7 @@
     "typescript": "^2.1.5",
     "typings": "^2.0.0",
     "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.2",
     "whatwg-fetch": "1.0.0"
   },
   "repository": {
