--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "set NODE_ENV=development && node server.js",
     "bundleActions": "set NODE_ENV=production && webpack --progress --config ./webpack/webpack.config.actions.prod.js",
     "bundleChromeExtension": "set NODE_ENV=production && gulp build-chromeExt",
-    "generate": "set NODE_ENV=production && generate-chrome-dev"
+    "generate": "set NODE_ENV=production && gulp generate-chrome-dev",
+    "generateZip": "set NODE_ENV=production && gulp generate-chrome-package"
   },
   "dependencies": {
     "axios": "^0.15.3",
@@ -51,7 +52,6 @@
     "node-sass": "^4.4.0",
     "opener": "^1.4.2",
     "path": "^0.12.7",
-    "react-hot-loader": "~3.0.0-beta.6",
     "react-redux": "^5.0.1",
     "redux": "^3.6.0",
     "redux-immutable-state-invariant": "^1.2.4",
