--- a/package.json
+++ b/package.json
@@ -35,11 +35,7 @@
     "@types/sharepoint": "^2013.0.31",
     "@types/whatwg-fetch": "0.0.32",
     "@types/whatwg-streams": "0.0.1",
-    "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-es2016": "^6.22.0",
-    "babel-preset-react": "^6.22.0",
+    "awesome-typescript-loader": "^3.0.0-beta.18",
     "css-loader": "^0.26.1",
     "es6-promise": "4.0.5",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -58,8 +54,8 @@
     "redux": "^3.6.0",
     "redux-immutable-state-invariant": "^1.2.4",
     "sass-loader": "^4.1.1",
+    "source-map-loader": "^0.1.6",
     "style-loader": "^0.13.1",
-    "ts-loader": "^2.0.0",
     "typescript": "^2.1.5",
     "typings": "^2.0.0",
     "webpack": "^1.14.0",
