--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
     "typescript.check.workspaceVersion": false,
-    "vsicons.presets.angular": false
+    "typescript.tsdk": "./node_modules/typescript/lib",
+    "vsicons.presets.angular": false,
+    "tslint.enable": true
 }
