--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Chrome SP Dev Tools",
+    "name": "Chrome SP Dev Tools",
     "version": "1.2.0",
     "manifest_version": 2,
     "description": "Chrome SP Dev Tools",
@@ -16,6 +16,10 @@
             "scripts/background.js"
         ]
     },
+    "content_scripts": [{
+        "matches": ["<all_urls>"],
+        "js": ["scripts/content.js"]
+    }],
     "permissions": [
         "tabs",
         "http://*/*",
