--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "typescript.check.workspaceVersion": false,
     "typescript.tsdk": "./node_modules/typescript/lib",
-    "vsicons.presets.angular": true,
+    "vsicons.presets.angular": false,
     "tslint.enable": true
 }
