Fixed issue with dependencies

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
         "module": "commonjs",
         "target": "es5",
         "jsx": "react",
-        "moduleResolution": "node"
+        "moduleResolution": "node",
+        "lib": ["es2017", "dom"]
     }
 }
