--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "Google Chrome extension that opens a Property bag Modal dialog administration",
   "scripts": {
-    "start": "set NODE_ENV=development && node server.js",
+    "start": "set NODE_ENV=development && gulp generate-chrome-dev && node server.js",
     "bundleActions": "set NODE_ENV=production && webpack --progress --config ./webpack/webpack.config.actions.prod.js",
     "bundleChromeExtension": "set NODE_ENV=production && gulp build-chromeExt",
     "generate": "set NODE_ENV=production && gulp generate-chrome-dev",
@@ -35,6 +35,7 @@
     "es6-promise": "4.0.5",
     "extract-text-webpack-plugin": "^2.0.0-rc.2",
     "gulp": "^3.9.1",
+    "gulp-replace": "^1.0.0",
     "gulp-util": "^3.0.8",
     "gulp-zip": "^3.2.0",
     "http-server": "^0.9.0",
@@ -43,6 +44,7 @@
     "opener": "^1.4.2",
     "path": "^0.12.7",
     "react-redux": "^5.0.1",
+    "readline-sync": "^1.4.9",
     "redux": "^3.6.0",
     "redux-immutable-state-invariant": "^1.2.4",
     "sass-loader": "^4.1.1",
