Partial Clean up

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,9 @@
     "typescript.check.workspaceVersion": false,
     "typescript.tsdk": "./node_modules/typescript/lib",
     "vsicons.presets.angular": false,
-    "tslint.enable": true
+    "tslint.enable": true,
+    "cSpell.words": [
+        "Guid",
+        "unmount"
+    ]
 }
